--- a/package.json
+++ b/package.json
@@ -7,9 +7,15 @@
     "@types/node": "10.12.15",
     "@types/react": "16.7.17",
     "@types/react-dom": "16.0.11",
+    "@types/react-redux": "^6.0.11",
+    "@types/redux-thunk": "^2.1.0",
+    "fetch": "^1.1.0",
+    "node-sass": "^4.11.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "3.2.2"
   },
   "scripts": {
