--- a/package.json
+++ b/package.json
@@ -7,22 +7,27 @@
     "@types/node": "10.12.15",
     "@types/react": "16.7.17",
     "@types/react-dom": "16.0.11",
+    "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^6.0.11",
     "@types/redux-thunk": "^2.1.0",
     "fetch": "^1.1.0",
     "node-sass": "^4.11.0",
     "react": "^16.6.3",
+    "react-app-rewire-hot-loader": "^1.0.3",
+    "react-app-rewire-typescript": "^2.0.2",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
+    "react-hot-loader": "^4.6.2",
     "react-redux": "^6.0.0",
     "react-scripts": "2.1.1",
     "redux-thunk": "^2.3.0",
     "typescript": "3.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
