--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "typescript-tslint-plugin": "^0.2.1"
+  }
 }
