--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,16 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
-    "lib": ["dom","es2015"],
-    "types": []
+    "lib": [
+      "dom",
+      "es2015"
+    ],
+    "types": [],
+    "plugins": [
+      {
+        "name": "typescript-tslint-plugin"
+      }
+    ]
   },
   "include": [
     "src"
