--- a/package.json
+++ b/package.json
@@ -3,25 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/jest": "23.3.10",
-    "@types/node": "10.12.15",
-    "@types/react": "16.7.17",
-    "@types/react-dom": "16.0.11",
-    "@types/react-hot-loader": "^4.1.0",
-    "@types/react-redux": "^6.0.11",
-    "@types/redux-thunk": "^2.1.0",
     "fetch": "^1.1.0",
-    "node-sass": "^4.11.0",
     "react": "^16.6.3",
-    "react-app-rewire-hot-loader": "^1.0.3",
-    "react-app-rewire-typescript": "^2.0.2",
-    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.6.2",
     "react-redux": "^6.0.0",
-    "react-scripts": "2.1.1",
-    "redux-thunk": "^2.3.0",
-    "typescript": "3.2.2"
+    "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -39,6 +29,20 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/jest": "23.3.10",
+    "@types/node": "10.12.15",
+    "@types/react": "16.7.17",
+    "@types/react-dom": "16.0.11",
+    "@types/react-hot-loader": "^4.1.0",
+    "@types/react-redux": "^6.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-router-redux": "^5.0.17",
+    "node-sass": "^4.11.0",
+    "react-app-rewire-hot-loader": "^1.0.3",
+    "react-app-rewire-typescript": "^2.0.2",
+    "react-app-rewired": "^1.6.2",
+    "react-scripts": "2.1.1",
+    "typescript": "3.2.2",
     "typescript-tslint-plugin": "^0.2.1"
   }
 }
