--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "connected-react-router": "^6.0.0",
     "fetch": "^1.1.0",
+    "history": "^4.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.6.2",
     "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -29,19 +31,22 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@types/history": "^4.7.2",
     "@types/jest": "23.3.10",
     "@types/node": "10.12.15",
     "@types/react": "16.7.17",
     "@types/react-dom": "16.0.11",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-redux": "^6.0.11",
+    "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react-router-redux": "^5.0.17",
     "node-sass": "^4.11.0",
     "react-app-rewire-hot-loader": "^1.0.3",
     "react-app-rewire-typescript": "^2.0.2",
     "react-app-rewired": "^1.6.2",
     "react-scripts": "2.1.1",
+    "tslint": "^5.12.0",
+    "tslint-react": "^3.6.0",
     "typescript": "3.2.2",
     "typescript-tslint-plugin": "^0.2.1"
   }
