--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-form": "^8.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sanitize-html": "^1.20.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -44,6 +45,7 @@
     "@types/react-router": "^4.4.3",
     "@types/react-router-dom": "^4.3.1",
     "@types/redux-form": "^7.4.13",
+    "@types/sanitize-html": "^1.18.2",
     "node-sass": "^4.11.0",
     "react-app-rewire-hot-loader": "^1.0.3",
     "react-app-rewire-typescript": "^2.0.2",
